# hole_in_one

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: WEB_DASHBOARD_IMPLEMENTATION_GUIDE.md
src/hole_in_one/: __init__.py  cli.py  clod_api.py  cursor_api.py  dashboard_api.py  dashboard_store.py  feedback.py  github_api.py  orchestrate.py
src/hole_in_one/ui/: __init__.py  app.py  graph.py  models.py  provider.py
web/: README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/components/dashboard/: AgentTree.tsx  Dashboard.tsx  ForceGraph.tsx
web/src/lib/dashboard/: backendProvider.ts  mockProvider.ts  types.ts  useDashboard.ts
