[project]
name = "hole_in_one"
version = "0.1.0"
description = "hole_in_one: Cursor cloud agents + Greptile review loop (Python)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "textual>=0.63.0",
]

[project.scripts]
orchestrate = "hole_in_one.cli:main"
hole-in-golf = "hole_in_one.cli:main"
orchestrate-loop = "hole_in_one.orchestrate:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
